<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/fondoApp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".RecyclerActivity">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_margin="25dp"
        android:gravity="center"
        android:background="@drawable/text_box_float"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/reciclajeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:text="@string/recolectar"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:background="@drawable/textbox"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:background="@drawable/textbox"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/set_categoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:text="@string/plastico"
                android:textAlignment="center"
                android:textColor="@color/greenApp"
                android:textSize="30sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="0.4"
            android:background="@drawable/textbox"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/set_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                app:srcCompat="@drawable/plastic" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:text="@string/cantidad"
            android:textAlignment="center"
            android:textColor="@color/greenApp"
            android:textSize="24sp"
            android:textStyle="normal" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/textbox"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/cantidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:text="@null"
                android:background="@null"
                android:textAlignment="center"
                android:inputType="number"
                android:textColor="@color/greenApp"
                android:textSize="30sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:text="@string/gananciaInser"
            android:textAlignment="center"
            android:textColor="@color/greenApp"
            android:textSize="24sp"
            android:textStyle="normal" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/textbox"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ganancias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:inputType="number"
                android:text="@null"
                android:background="@null"
                android:textAlignment="center"
                android:textColor="@color/greenApp"
                android:textSize="30sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:text="@string/lugarCambios"
            android:textAlignment="center"
            android:textColor="@color/greenApp"
            android:textSize="24sp"
            android:textStyle="normal" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/textbox"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/lugar_de_cambio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:text="@null"
                android:background="@null"
                android:textAlignment="center"
                android:textColor="@color/greenApp"
                android:textSize="30sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:text="@string/fecha"
            android:textAlignment="center"
            android:textColor="@color/greenApp"
            android:textSize="24sp"
            android:textStyle="normal" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/textbox"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:text="@null"
                android:background="@null"
                android:textAlignment="center"
                android:textColor="@color/greenApp"
                android:textSize="30sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">


        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/recolectar"
            style="@style/botonesAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/Ingresar" />

        <Button
            android:id="@+id/cancelar"
            style="@style/botonesCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/greenApp"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/icon_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/icon_home" />

            <ImageView
                android:id="@+id/icon_recicler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/icon_recicler_menu" />

            <ImageView
                android:id="@+id/icon_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/consejos" />

            <ImageView
                android:id="@+id/icon_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/account_box" />
        </LinearLayout>

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>